Bug 373053 - Missing roundabout
Summary: Missing roundabout
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: android (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-28 21:44 UTC by Albert Astals Cid
Modified: 2017-02-03 13:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Android/1.0.2
Sentry Crash Report:


Attachments
image of the missing roundabout (128.75 KB, image/jpeg)
2016-11-28 21:44 UTC, Albert Astals Cid
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2016-11-28 21:44:23 UTC
Looking at the attached image it's kind of weird that the roundabout is not there.

This belongs to http://www.openstreetmap.org/#map=19/41.35792/2.10283
Comment 1 Albert Astals Cid 2016-11-28 21:44:49 UTC
Created attachment 102511 [details]
image of the missing roundabout
Comment 2 Dennis Nienhüser 2016-12-17 07:32:37 UTC
Git commit 70213164ba4709b9d006991998d729af6d2e7992 by Dennis Nienhüser.
Committed on 17/12/2016 at 07:31.
Pushed by nienhueser into branch 'master'.

Fix Douglas Peucker node reduction for small circular line strings

This lead to missing roundabouts on level 15 and lower.
FIXED-IN: Android/1.0.2

M  +1    -1    tools/vectorosm-tilecreator/NodeReducer.h

https://commits.kde.org/marble/70213164ba4709b9d006991998d729af6d2e7992
Comment 3 Dennis Nienhüser 2017-02-03 12:49:24 UTC
Some roundabouts are still missing.
Comment 4 Dennis Nienhüser 2017-02-03 13:45:35 UTC
Git commit 296b6269c5ed5d87eec7f37a5a0b39d37c1acb8f by Dennis Nienhüser.
Committed on 03/02/2017 at 13:45.
Pushed by nienhueser into branch 'master'.

Fix corner case when lines degenerate to points

M  +1    -1    tools/vectorosm-tilecreator/NodeReducer.cpp

https://commits.kde.org/marble/296b6269c5ed5d87eec7f37a5a0b39d37c1acb8f