Fix Douglas Peucker node reduction for small circular line strings

This lead to missing roundabouts on level 15 and lower.

BUG: 373053
FIXED-IN: Android/1.0.2